feat(app): added new UI screens, common utilities, and localization support
- Added animated splash screen
- Added dashboard screen with bottom navigation
   - Added habits screen with cards listing
   - Added Add/Edit habits functionality
   - Added floating action button
- Added level-up screen
- Added settings screen
   - Added dark mode with toggle functionality
   - Added reset all habits functionality
   - Added change streak emoji functionality

- In Common Package
   - Added Const Data directory
      - Added app constants for static data
   - Added Utils package
      - Added extensions
         - Added color opacity extension
         - Added required field extension
      - Added input formatters
         - Added input formatters list
         - Added trim text formatter
      - Added dialog utils
      - Added service utils
      - Added validators
   - Added Widgets
      - Added bubble background animation
      - Added primary text form field
      - Added typewriter text

- In Translation Package
   - Added strings for app localization

--- a/packages/common/pubspec.yaml
+++ b/packages/common/pubspec.yaml
@@ -10,7 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   flutter_screenutil: ^5.9.3
+  flutter_animate: ^4.5.2
+  emoji_picker_flutter: ^4.3.0
 
 dev_dependencies:
   flutter_test:
