--- a/levelup/pubspec.yaml
+++ b/levelup/pubspec.yaml
@@ -17,11 +17,18 @@ dependencies:
   flutter_riverpod: ^2.6.1
   go_router: ^16.1.0
   flutter_screenutil: ^5.9.3
+  confetti: ^0.8.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  uuid: ^4.5.1
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.5.4
 
 flutter:
   uses-material-design: true
